add read sip file function, add get and plot SIP spectra function

--- a/AAisoPeak/Rcpp note.rmd
+++ b/AAisoPeak/Rcpp note.rmd
@@ -20,6 +20,27 @@ a=readScansMS2("/mnt/d/work/202202/testRAW/201019_CP_6801_E50.FT2",10000)
 a=readAllScanMS1("/mnt/d/work/202202/testRAW/201019_CP_6801_E50.FT1")
 b=readAllScanMS2("/mnt/d/work/202202/testRAW/201019_CP_6801_E50.FT2")
 
-a=readAllScanMS2("/mnt/d/work/202203/ecoliPct1/Pan_022822_X1.FT2")
-a=readAllScanMS1("/mnt/d/work/202203/ecoliPct1/Pan_022822_X1.FT1")
+a=readAllScanMS2("/mnt/d/work/202203/ecoliPct1/ft/Pan_022822_X1.FT2")
+a=readAllScanMS1("/mnt/d/work/202203/ecoliPct1/ft/Pan_022822_X1.FT1")
+
+a=readSip("/mnt/d/ubuntuShare/EcoliSIP/sip/Pan_022822_X1.C13_0Pct.sip")
+a=readSips("/mnt/d/ubuntuShare/EcoliSIP/sip/")
+
+a=getUnfilteredPeptides("/mnt/d/ubuntuShare/EcoliSIP/sip/sip0")
+a=getUnfilteredPSMs("/mnt/d/ubuntuShare/EcoliSIP/sip/")
+a=getUnfilteredPSMs("/mnt/d/ubuntuShare/EcoliSIP/sip/sip0")
+
+a=getFilterThreshold("/mnt/d/ubuntuShare/EcoliSIP/sip/sip0",0.01)
 ```
+
+## for plot
+
+```{r}
+a<-getPrecursorSpectra("KHRIP",2)
+plot(a)
+a<-getSipPrecursorSpectra("KHRIPCDRK", "C13", 0.55, 2)
+plot(a)
+a<-getSipBYionSpectra("KHRIPKR", "C13", 0.5, 1)
+plot(a)
+```
+
